# pulse

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  start_server.py  test_api.py  test_workflow.py
app/: __init__.py  config.py  main.py  models.py  orchestrator.py
app/agents/: __init__.py  composer.py  mapper.py  planner.py  validator.py
app/llm_clients/: openai_client.py
app/routes/: frontend.py  instances.py  mock_data.py  query.py  workflow.py
app/services/: database.py  redis.py  redis_ops.py  sql_runner.py
app/templates/: base.html  connections.html  dashboard.html  query.html  workflow.html
app/templates/partials/: connections_list.html  dashboard_connections.html  dashboard_stats.html  empty.html  query_result.html  workflow_panel.html  workflow_steps.html
frontend/: bun.lockb  package.json
frontend/nexfaster/: bun.lockb  package.json
frontend/nexfaster/src/components/: boilerplate.tsx  connections.tsx  cta-section.tsx  features-section.tsx  footer.tsx  header.tsx  hero-section.tsx  landing.tsx  pricing-section.tsx  query-runner.tsx  testimonials-section.tsx  workflow.tsx
frontend/nexfaster/src/config/: site.config.ts
frontend/nexfaster/src/frontend/: app.tsx
frontend/nexfaster/src/lib/: instances.ts  query.ts  workflow.ts
frontend/nexfaster/src/styles/: globals.css
frontend/nexfaster/src/types/: connection.ts  query.ts
frontend/src/components/: boilerplate.tsx  connection-details.tsx  workflow-history.tsx  workflow.tsx
frontend/src/frontend/: app.tsx
frontend/src/lib/: api.ts  workflow.ts
frontend/src/styles/: globals.css
frontend/src/types/: query.ts  workflow.ts
mock_data/: blog.sqlite  ecommerce.sqlite
