[project]
name = "pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "greenlet>=3.2.3",
    "jinja2>=3.1.6",
    "logfire[fastapi]>=3.18.0",
    "openai>=1.85.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=6.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "ruff>=0.11.13",
]


[tool.ruff]
src = ["app"]

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
    "*.html",
    "*.css",
    "*.js",
    "node_modules",
    ".env",
]
line-length = 120

[tool.ruff.lint]
ignore = [
    "B017",
    "B019",
    "B904",
    "B905",
    "C901",
    "E501",
    "E722",
    "E731",
    "F403",
    "F541",
    "F601",
    "UP007",
    "UP032",
    "B008",
    "T201", # prints
]
select = [
    "B",
    "C4",
    "C9",
    "DJ012",
    "E",
    "F",
    "RUF005",
    "RUF013",
    "RUF015",
    "T2",
    "TRY201",
    "TRY400",
    "UP",
    "W",
]
